<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="floatingheads.snapclone.activities.ChatActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@mipmap/ic_arrow_back_white_24dp"
        app:title="Chat"
        app:titleTextColor="#ffff" />


    <EditText
        android:id="@+id/chat_input"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#FFFFFF"
        android:hint="@string/chat_input"
        android:imeOptions="actionSend"
        android:inputType="text|textAutoCorrect"
        android:paddingEnd="0dp"
        android:paddingStart="48dp" />

    <ImageButton
        android:id="@+id/attach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chat_messages"
        android:contentDescription="@string/add_btn_content_description"
        android:src="@mipmap/ic_add_black_24dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/chat_messages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/chat_input"
        android:layout_below="@+id/chat_toolbar"
        android:background="#FFFFFF"
        android:paddingBottom="20dp" />

    <ImageView
        android:id="@+id/chat_bubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/chat_bubble_content_description" />
</RelativeLayout>