<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fefefe"
    tools:context="floatingheads.snapclone.fragments.ProfileFragment">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="281dp"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        android:src="@mipmap/profilebkgnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@mipmap/avatar"
        app:layout_constraintBottom_toTopOf="@+id/infoParentContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gen_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/infoParentContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileAvatar" />

    <LinearLayout
        android:id="@+id/infoParentContainer"
        android:layout_width="368dp"
        android:layout_height="121dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="220dp"
        android:background="#5a5a5a"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/friendsContainer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileFriendsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_friends"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gen_profileFriendsNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pointsContainer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profilePointsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_points"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gen_profilePointsNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_friend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/send_fr"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoParentContainer" />


</android.support.constraint.ConstraintLayout>
